[gd_scene load_steps=9 format=3 uid="uid://b5kubn5aon20g"]

[ext_resource type="PackedScene" uid="uid://b8lane8pvkuhl" path="res://PackedScenes/ParentScenes/Entity.tscn" id="1_jskns"]
[ext_resource type="Script" path="res://Scripts/Enemys/enemy_2.gd" id="2_oa3f7"]
[ext_resource type="Texture2D" uid="uid://gmbalnn87um4" path="res://icon.svg" id="3_clpxw"]
[ext_resource type="PackedScene" uid="uid://cfsospt848occ" path="res://PackedScenes/Shots/enemy_shot_1.tscn" id="3_y346k"]
[ext_resource type="AnimationLibrary" uid="uid://ylybpvoilvx6" path="res://Animation/EnemyEnter.res" id="4_bvhem"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kpehx"]
albedo_texture = ExtResource("3_clpxw")
emission_enabled = true
emission = Color(0.258824, 0.258824, 0.258824, 1)
uv1_scale = Vector3(2.06, 2.06, 2.06)
uv1_offset = Vector3(-0.01, 0, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_xpvow"]
material = SubResource("StandardMaterial3D_kpehx")
bottom_radius = 2.513

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4yxpv"]
height = 1.83208
radius = 2.25274

[node name="Enemy2" instance=ExtResource("1_jskns")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 2
collision_mask = 14
script = ExtResource("2_oa3f7")
shot_scene = ExtResource("3_y346k")
points = 10

[node name="MeshInstance3D" parent="." index="0"]
mesh = SubResource("CylinderMesh_xpvow")

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198395, -0.0812378, 0.00354004)
shape = SubResource("CylinderShape3D_4yxpv")

[node name="Cannon" type="Marker3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.21558)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"EnemyEnter": ExtResource("4_bvhem")
}

[node name="ShootTimer" type="Timer" parent="." index="6"]
wait_time = 0.1

[node name="ReloadTimer" type="Timer" parent="." index="7"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
